@@ -30,6 +30,9 @@ New in spot 2.11.4.dev  (not yet released)
     verbatim.  We also changed the behavior of as_twa() to not merge
     identical states.
 
+  - Fix segfaults occuring in determinization of 1-state terminal
+    automata.
+
 New in spot 2.11.4  (2023-02-10)
 
   Python:
